<resources>
    <string name="app_name">SiembrApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_verification">Verificar contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="registerHeading">Registro</string>
    <string name="welcome">"Bienvenido!!"</string>
    <string name="invalid_username">No es un correo válido</string>
    <string name="invalid_password">Contraseña debe tener mínimo 6 letras</string>
    <string name="login_failed">"Fallo en inicio de sesión"</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="siguiente">Siguiente</string>
    <string name="trabajoLbl">Trabajo</string>
    <string name="campanna">Campaña de reforestación</string>
    <string name="otroLbl">Otro</string>
    <string name="asadaLbl">Asada</string>
    <string name="estadoLbl">Estado</string>
    <string name="gobiernoLocalLbl">Gobierno local</string>
    <string name="ongLbl">ONG</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="misarboles">Mis arboles</string>
    <string name="quesembrar">¿Que sembrar?</string>
    <string name="viveros">Viveros</string>
    <string name="familialbl">Familia</string>
    <string name="origenLbl">Origen</string>
    <string name="habito">Tamaño y diámetro</string>
    <string name="rangoaltitudinalLbl">Rango altitudinal</string>
    <string name="requerimientosluzLbl">Requerimientos de luz</string>
    <string name="fenologiaLlb">Fenologia</string>
    <string name="frutoLbl">Fruto</string>
    <string name="texturaFrutoLbl">Textura del fruto</string>
    <string name="florLbl">Flor</string>
    <string name="agentePolinizadorLbl">Agente polinizador</string>
    <string name="metododispersionLbl">Método de dispersión</string>
    <string name="usosLbl">Usos conocidos</string>
    <string name="camposvacios">Hay campos vacíos!</string>
    <string name="ViverosLbl">Viveros</string>
    <string name="timedouterror">Servidor no responde</string>
    <string name="connectionError">Error de conexión</string>
    <string name="loginError">Error al iniciar sesión</string>
    <string name="getuserinfoerror">No se consiguio datos de usuario</string>
    <string name="errorAlParsear">Error de parse</string>
    <string name="Success">SUCCESS</string>
    <string name="loading">Cargando...</string>
    <string name="direccionLbl">Dirección</string>
    <string name="telefonoLbl">Teléfonos</string>
    <string name="horarioLbl">Horario</string>
    <string name="habilitar_permisos">Habilitar Permisos</string>
    <string name="next_step">Siguiente</string>
    <string name="recommended_regions">Regiones Recomendadas</string>
    <string name="central_region">Región Central</string>
    <string name="chorotega_region">Región Chorotega</string>
    <string name="pacifico_central_region">Región Pacífico Central</string>
    <string name="brunca_region">Región Brunca</string>
    <string name="huetar_norte_region">Región Huetar Norte</string>
    <string name="huetar_atlantica_region">Región Huetar Atlántica</string>
    <string name="que_sembrar_text">🔎 <u>¿Qué sembrar?</u></string>
    <string name="que_sembrar_description">Cuéntanos cómo se ve la vegetación en el espacio donde quieres hacer la reforestación</string>
    <string name="que_sembrar_light_description">¿Qué cantidad de luz recibe el terreno donde se va a hacer la reforestación?</string>
    <string name="light_level_1"><b>Mucha luz constantemente</b></string>
    <string name="light_level_1_2">Al rededor no hay objetos que obstruyan la luz</string>
    <string name="light_level_2_1">Mucha luz en ocasiones</string>
    <string name="light_level_2_2">Hay pocos objetos no muy grandes al rededor</string>
    <string name="light_level_3_1">Luz regular en ocasiones</string>
    <string name="light_level_3_2">Hay algunos objetos grandes al rededor</string>
    <string name="light_level_4_1">Poca luz</string>
    <string name="light_level_4_2">Al rededor hay muchos objetos que obstruyen la luz</string>
    <string name="edit_user_info">Presiona para editar</string>
    <string name="user_info_update">Actualizar usuario</string>
    <string name="show_all">Mostrar todos</string>
    <string name="best_results">Mejores resultados de la búsqueda</string>
    <string name="Search">Buscar</string>
    <string name="FILTER">FILTRAR</string>

</resources>