<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".register.RegisterActivity_Step_3">

    <TextView
        android:id="@+id/siembrAppLbl2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registerHeading"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/siembrAppLbl3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="3"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siembrAppLbl2" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/asadaLbl"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siembrAppLbl3" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/estadoLbl"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="310dp" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/gobiernoLocalLbl"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="401dp" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ongLbl"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="493dp" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/otroLbl"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="586dp" />

</androidx.constraintlayout.widget.ConstraintLayout>