<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".register.RegisterActivity_Step_2">

    <TextView
        android:id="@+id/siembrAppLbl2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registerHeading"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/siembrAppLbl3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siembrAppLbl2" />

    <Button
        android:id="@+id/trabajoChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/trabajoLbl"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="281dp" />

    <Button
        android:id="@+id/campannaChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/campanna"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="388dp" />

    <Button
        android:id="@+id/otroChoiceBtn"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/otroLbl"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="490dp" />

</androidx.constraintlayout.widget.ConstraintLayout>