<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quesembrar.steps.QueSembrar_Step_3">

    <TextView
        android:id="@+id/que_sembrar_light_description_textView"
        android:layout_width="236dp"
        android:layout_height="78dp"
        android:text="@string/que_sembrar_light_description"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/que_sembrar_light_title_textView" />

    <TextView
        android:id="@+id/que_sembrar_light_title_textView"
        android:layout_width="234dp"
        android:layout_height="46dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="89dp"
        android:text="XD"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/que_sembrar_light_description_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/atrasBtn4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/atrasBtn4"
        android:layout_width="61dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:background="@color/White"
        android:minWidth="50dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />


    <LinearLayout
        android:id="@+id/light_level_1"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/que_sembrar_light_description_textView">

        <TextView
            android:id="@+id/light_level_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:text="@string/light_level_1"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/light_level_1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/light_level_1_2"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/light_level_2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_level_1">

        <TextView
            android:id="@+id/light_level_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/light_level_2_1"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/light_level_2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/light_level_2_2"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/light_level_3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_level_2">

        <TextView
            android:id="@+id/light_level_3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:text="@string/light_level_3_1"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/light_level_3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/light_level_3_2"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/light_level_4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_level_3">

        <TextView
            android:id="@+id/light_level_4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:text="@string/light_level_4_1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/light_level_4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/light_level_4_2"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>